@@ -51,11 +51,11 @@ rsignrank(nn, n)
   used to do the calculations for all combinations of the two up to
   the length of the longer vector.
 }
-\author{Kurt Hornik}
+\author{Kurt Hornik; efficiency improvement by Ivo Ugrina.}
 \seealso{
   \code{\link{wilcox.test}} to calculate the statistic from data, find p
   values and so on.
-  
+
   \code{\link{dwilcox}} etc, for the distribution of \emph{two-sample}
   Wilcoxon rank sum statistic.
 }
@@ -66,6 +66,12 @@ par(mfrow=c(2,2))
 for(n in c(4:5,10,40)) {
   x <- seq(0, n*(n+1)/2, length=501)
   plot(x, dsignrank(x,n=n), type='l', main=paste("dsignrank(x,n=",n,")"))
+}
+\dontshow{
+p <- c(1, 1, 1, 2, 2:6, 8, 10, 11, 13, 15, 17, 20, 22, 24,
+       27, 29, 31, 33, 35, 36, 38, 39, 39, 40)
+stopifnot(round(dsignrank(0:56, n=10)* 2^10) == c(p, rev(p), 0),
+	  qsignrank((1:16)/ 16, n=4) == c(0:2, rep(3:7, each=2), 8:10))
 }
 }
 \keyword{distribution}
